Thu Mar 25 11:00:20 EST 2004	JK Lowden <jklowden@schemamania.org>
	* src/dblib/dblib.c src/dblib/unittests/rpc.c
	- fetch return status & output parameters from stream
	- when client requests the data, instead of waiting for 
	- end-of-results.  

Thu Mar 25 00:37:43 EST 2004	JK Lowden <jklowden@schemamania.org>
	* src/tds/mem.c src/tds/token.c
	- additional logging to trace rpc

Wed Mar 24 23:58:52 EST 2004	JK Lowden <jklowden@schemamania.org>
	* src/dblib/unittests/rpc.c
	- more generalized processing, to allow more complex tests.
	- dbnumrets() fails if stored procedure returns multiple result sets. 
	
Wed Mar 24 17:30:30 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/native.c src/odbc/odbc.c src/odbc/prepare_query.h:
	- applied patch from Nick Stoughton for scalar functions (modified)

Tue Mar 23 13:14:29 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* include/cspublic.h include/ctlib.h:
	- complete privatization (internal constants)
	- cleanup
	- style comments update

Tue Mar 23 09:59:07 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* include/cspublic.h src/ctlib/ctutil.c:
	- use textlen and sqlstate/sqlstatelen fields of CS_SERVERMSG
	- avoid possible buffer overflow on long messages
	* src/tds/token.c: cleanup

Mon Mar 22 21:50:56 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* include/cspublic.h include/ctlib.h src/ctlib/blk.c:
	* src/ctlib/cs.c src/ctlib/ctutil.c:
	* src/ctlib/unittests/common.c src/ctlib/unittests/common.h:
	* src/ctlib/unittests/cs_diag.c src/ctlib/unittests/ct_diagall.c:
	* src/ctlib/unittests/ct_diagclient.c:
	* src/ctlib/unittests/t0006.c:
	- CTLib: name privatization

Mon Mar 22 20:22:45 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* TODO: updated
	* include/md4.h src/tds/md4.c:
	- make more similar to source
	* include/Makefile.am src/tds/Makefile.am include/md5.h(added):
	* src/tds/md5.c(added):
	- added md5 algorithm (for NTLMv2 and link tests)
