@@ -1,3 +1,7 @@
+Thu Mar 25 14:10:44 EST 2004	JK Lowden <jklowden@schemamania.org>
+	* src/dblib/rpc.c src/dblib/unittests/rpc.c
+	- fix rpc variable-length output parameter handling.
+
 Thu Mar 25 11:00:20 EST 2004	JK Lowden <jklowden@schemamania.org>
 	* src/dblib/dblib.c src/dblib/unittests/rpc.c
 	- fetch return status & output parameters from stream
